fix(styles): remove extra pixel overflow for drupal

--- a/packages/styles/scss/components/_video.scss
+++ b/packages/styles/scss/components/_video.scss
@@ -35,6 +35,7 @@
   &--wrapper {
     line-height: 0;
     position: relative;
+    overflow: hidden;
   }
 
   // ? drupal style reset issue
